--- a/src/front/FixWise/package.json
+++ b/src/front/FixWise/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "flowbite-react": "^0.11.7",
+    "flowbite-react": "^0.11.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
@@ -33,4 +34,3 @@
     "vite-plugin-svgr": "^4.3.0"
   }
 }
-
