--- a/src/back/package.json
+++ b/src/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotnet": "^1.1.4",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
   }
