--- a/src/front/FixWise/package.json
+++ b/src/front/FixWise/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.22.0",
     "sweetalert2-react-content": "^5.1.0",
